# casper-tcg-oracle

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Odra.toml  PLAYBOOK.md  README.md  SECURITY.md  casper_deployer.py  casper_merkle_builder.py  casper_proxy.py  deploy.json  deploy2.json  deploy3.json  deploy_final.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
src/: lib.rs  merkle_oracle.rs
