[package]
edition = "2021"
name = "casper_tcg_oracle"
version = "0.1.0"

[dependencies]
odra = { version = "2.7.0", features = [], default-features = false }
odra-cli = "2.8.0"
[dev-dependencies]
odra-test = { version = "2.7.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.7.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.7.0", features = [], default-features = false }
odra-cli = { version = "2.7.0", features = [], default-features = false }

[[bin]]
name = "casper_tcg_oracle_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "casper_tcg_oracle_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "casper_tcg_oracle_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
